Install additional software (Parcellite)

--- a/dev-machine.yml
+++ b/dev-machine.yml
@@ -164,4 +164,10 @@
      apt:
        name: vlc
        state: latest
- 
+
+   - name: Install VLC
+     become: true
+     apt:
+       name: parcellite
+       state: latest
+
