Fixes in conky service and conf files. Updates in script to restart system.d

--- a/apps-conf-files/conky/conky.service
+++ b/apps-conf-files/conky/conky.service
@@ -2,7 +2,7 @@
 Description=Starts Conky service
 
 [Service]
-ExecStart=/home/$USER/.concky/conky-startup.sh
+ExecStart=/home/$USER/.conky/conky-startup.sh
 
 [Install]
 WantedBy=multi-user.target
