--- a/apps-conf-files/conky/Conky.desktop
+++ b/apps-conf-files/conky/Conky.desktop
@@ -4,7 +4,7 @@ Version=0.9.4
 Type=Application
 Name=Conky
 Comment=
-Exec=/home/ztach/.conky/conky-startup.sh
+Exec=/home/$USER/.conky/conky-startup.sh
 OnlyShowIn=XFCE;
 StartupNotify=false
 Terminal=false
