--- a/dev-machine.yml
+++ b/dev-machine.yml
@@ -167,6 +167,12 @@
        destfile: "/home/{{ ansible_env.USER }}/.bashrc"
        line: 'alias vi=vim.tiny'
 
+   - name: Create autostart folder
+     file:
+       path: /home/{{ ansible_env.USER }}/.config/autostart
+       state: directory
+       mode: 0755
+
    - name: Check if Steam already installed
      shell: apt list --installed | grep steam
      ignore_errors: True
@@ -312,3 +318,9 @@
    - name: Fix ownership
      become: true
      file: state=directory path={{ apps_dir }}/glew-1.11.0 owner={{ ansible_env.USER }} group={{ ansible_env.USER }} recurse=yes
+
+   - name: Copy all desktop entries to the appropriate directory
+     become: true
+     copy:
+       src: /tmp/dev-machine-bootstrapper/desktop-entries
+       dest: /usr/share/applications
