--- a/roles/clion/tasks/main.yml
+++ b/roles/clion/tasks/main.yml
@@ -16,3 +16,9 @@
  - name: Fix ownership
    become: true
    file: state=directory path={{ apps_dir }}/clion-{{ clion_version }} owner={{ ansible_env.USER }} group={{ ansible_env.USER }} recurse=yes
+
+ - name: Copy all desktop entries to the appropriate directory
+   become: true
+   copy:
+     src: /tmp/dev-machine-bootstrapper/desktop-entries/jetbrains-clion.desktop
+     dest: /usr/share/applications/jetbrains-clion.desktop
