--- a/roles/clion/tasks/main.yml
+++ b/roles/clion/tasks/main.yml
@@ -17,7 +17,7 @@
    become: true
    file: state=directory path={{ apps_dir }}/clion-{{ clion_version }} owner={{ ansible_env.USER }} group={{ ansible_env.USER }} recurse=yes
 
- - name: Copy all desktop entries to the appropriate directory
+ - name: Copy desktop entry
    become: true
    copy:
      src: /tmp/dev-machine-bootstrapper/desktop-entries/jetbrains-clion.desktop
