--- a/common.yml
+++ b/common.yml
@@ -7,6 +7,7 @@
       git:
         repo: https://github.com/zztach/dev-machine-bootstrapper.git
         dest: "/tmp/dev-machine-bootstrapper"
+        accept_hostkey: yes
         update: yes
         force: yes
 
@@ -70,6 +71,7 @@
       git:
         repo: https://github.com/zztach/dev-machine-bootstrapper.git
         dest: "/home/{{ ansible_env.USER }}/sources/dev-machine-bootstrapper"
+        accept_hostkey: yes
         update: yes
         force: yes
 
