--- a/common.yml
+++ b/common.yml
@@ -86,3 +86,8 @@
         path: /home/{{ ansible_env.USER }}/.config/autostart
         state: directory
         mode: 0755
+
+    - name: Apply cairo-dock configuration
+      copy:
+       src: /tmp/dev-machine-bootstrapper/apps-conf-files/.gitconfig
+       dest: /home/{{ ansible_env.USER }}/.gitconfig
