--- a/common.yml
+++ b/common.yml
@@ -117,6 +117,31 @@
         destfile: "/home/{{ ansible_env.USER }}/.bashrc"
         line: 'export LD_LIBRARY_PATH=/usr/lib64'
 
+    - name: Disable ipv6 \#1
+      become: true
+      sysctl:
+        name: net.ipv6.conf.all.disable_ipv6
+        value: 1
+        sysctl_set: yes
+        state: present
+
+    - name: Disable ipv6 \#2
+      become: true
+      sysctl:
+        name: net.ipv6.conf.default.disable_ipv6
+        value: 1
+        sysctl_set: yes
+        state: present
+
+    - name: Disable ipv6 \#3
+      become: true
+      sysctl:
+        name: net.ipv6.conf.lo.disable_ipv6
+        value: 1
+        sysctl_set: yes
+        state: present
+        reload: yes
+
     - name: Deploy default .gitconfig
       copy:
        src: /tmp/dev-machine-bootstrapper/apps-conf-files/.gitconfig
