--- a/roles/clion/tasks/main.yml
+++ b/roles/clion/tasks/main.yml
@@ -22,3 +22,15 @@
    copy:
      src: /tmp/dev-machine-bootstrapper/desktop-entries/jetbrains-clion.desktop
      dest: /usr/share/applications/jetbrains-clion.desktop
+
+ - name: Change IntelliJ config folder to SSD
+   lineinfile:
+     path: "{{ apps_dir }}/clion-2017.2.2/bin/idea.properties"
+     regexp: 'idea\.config\.path'
+     line: 'idea.config.path=/opt/.CLion/config'
+
+ - name: Change IntelliJ system folder to SSD
+   lineinfile:
+     path: "{{ apps_dir }}/clion-2017.2.2/bin/idea.properties"
+     regexp: 'idea\.system\.path'
+     line: 'idea.system.path=/opt/.CLion/system'
