--- a/roles/idea/tasks/main.yml
+++ b/roles/idea/tasks/main.yml
@@ -22,6 +22,7 @@
   unarchive:
     src: "https://download.jetbrains.com/idea/ideaIU-{{ idea_version }}.tar.gz"
     dest: "/{{ apps_dir }}/idea-IU-{{ idea_version }}"
+    extra_opts: [--strip-components=1]
     remote_src: True
   when: idea_folders.matched == 0
 
